2005-09-10  Frank Ch. Eigler  <fche@elastic.org>

	* arith.c: Add some comments explaining why the last change works.

2005-09-09  Martin Hunt  <hunt@redhat.com>

	* stat-common.c (_stp_stat_print_valtype): Use _stp_div64().
	* arith.c (_stp_div64): Check error before writing to it.
	Remove check against 32-bit LONG_MIN and -1. That only
	applies to 64-bit.
	(_stp_mod64): Ditto.

2005-09-08  Martin Hunt  <hunt@redhat.com>
	* arith.c (_stp_div64): Check for overflow.
	(_stp_mod64): Ditto.

2005-09-08  Martin Hunt  <hunt@redhat.com>	

	* arith.c (_stp_div64): For 64-bit cpus, just use native
	division. Otherwise call _div64().
	(_stp_mod64): Call _mod64() isf necessary.
	(_div64): 64-bit division for 32-bit cpus. 
	(_mod64): 64-bit modulo for 32-bit cpus.

	* map-values.c (_stp_map_entry_exists): Remove unused var.

2005-09-01  Martin Hunt  <hunt@redhat.com>

	* stack.c (_stp_stack_sprint): Add a verbose arg
	to pass along to underlying funcs.

2005-08-31  Martin Hunt  <hunt@redhat.com>

	* runtime.h (init_module): Include full prototype
	info in function cast to satisfy stap.

	* sym.c (_stp_kallsyms_lookup): Moved to runtime.h. 
	* stack.c (_stp_kta): Moved to runtime.h.
	* runtime.h (init_module): Initialize _stp_kallsyms_lookup
	and _stp_kta.
	* probes.c (_stp_lookup_name): Replaced by kallsyms_lookup_name().
	* list.c (_stp_copy_argv_from_user): ifdef this function
	NEED_STRING_VALS.

2005-08-30  Roland McGrath  <roland@redhat.com>

	* loc2c-runtime.h (fetch_register, store_register): Rewritten to pass
	REGS to dwarf_register_<N> as a macro argument.
	[__i386__, __x86_64__]: Update dwarf_register_* macros.
	[__i386__] (dwarf_register_4): Define special case for stack pointer.

2005-08-29  Martin Hunt  <hunt@redhat.com>

	* list.c (_stp_copy_argv_from_user): Move to here.
	* copy.c (_stp_copy_argv_from_user): Delete.
	* runtime.h: Always include copy.h.

2005-08-25  Roland McGrath  <roland@redhat.com>

	* loc2c-runtime.h (deref_string): Rewritten using deref.
